# py_web_engineering_9

./: client.py  inserting_data_to_mongo.py  main.py  proxy_server.py  pyproject.toml  scraper.py
data_selects/: find.py
models/: models.py
statics/: script.js  styles.css
templates/: index.html
