[tool.poetry]
name = "py_web_engineering_9"
version = "0.1.0"
description = ""
authors = ["Abboth <Alexmikhailov90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {version = "3.12", extras = ["srv"]}
mongoengine = "^0.29.1"
redis = "^5.2.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^35.2.0"
aiohttp = "^3.11.12"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
